--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,18 @@ body {
 .slide {
     min-height: 100% !important;
 }
+
+/*Masonry*/
+.my-masonry-grid {
+    display: -webkit-box; /* Not needed if autoprefixing */
+    display: -ms-flexbox; /* Not needed if autoprefixing */
+    display: flex;
+    width: auto;
+}
+.my-masonry-grid_column {
+    background-clip: padding-box;
+}
+
+.my-masonry-grid_column > div {
+    min-width: 100% !important;
+}
