--- a/src/App.css
+++ b/src/App.css
@@ -27,10 +27,12 @@ body {
 }
 .my-masonry-grid_column {
     background-clip: padding-box;
+    margin: 10px;
 }
 
 .my-masonry-grid_column > div {
     min-width: 100% !important;
+    margin: inherit;
 }
 
 input[type="number"]::-webkit-outer-spin-button,
