--- a/src/App.css
+++ b/src/App.css
@@ -27,12 +27,22 @@ body {
 }
 .my-masonry-grid_column {
     background-clip: padding-box;
-    margin: 10px;
+    margin: 8px;
+}
+
+@media (max-width: 500px) {
+    .my-masonry-grid_column {
+        margin: 0;
+    }
+
+    .my-masonry-grid_column > div {
+        margin: 0;
+    }
 }
 
 .my-masonry-grid_column > div {
     min-width: 100% !important;
-    margin: inherit;
+    margin: 8px;
 }
 
 input[type="number"]::-webkit-outer-spin-button,
